<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_playing_now"
            android:icon="@drawable/ic_playing_now"
            android:title="@string/playing_now" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_upcoming"
            android:title="@string/upcoming_movies" />
        <item
            android:id="@+id/nav_refresh_lists"
            android:icon="@drawable/ic_refresh"
            android:title="@string/refresh_lists" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/about_us" />
    </group>
    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

</menu>
