<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Space
        android:id="@+id/space1"
        android:layout_width="0dp"
        android:layout_height="6dp"
        app:layout_constraintBottom_toTopOf="@+id/video_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/movie_thumbnail"
        android:layout_width="91dp"
        android:layout_height="0dp"
        android:contentDescription="@string/movie_thumbnail"
        android:elevation="13dp"
        android:scaleType="fitCenter"
        android:src="@drawable/noimageavailable"
        app:layout_constraintBottom_toBottomOf="@+id/video_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/video_view"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="13dp"
        android:text="@string/movie_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/movie_thumbnail"
        app:layout_constraintTop_toTopOf="@+id/video_view" />

    <TextView
        android:id="@+id/movie_descr_short"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="13dp"
        android:text="@string/short_movie_description"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/movie_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

    <View
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/movie_view_border"
        android:elevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space2"
        android:layout_width="0dp"
        android:layout_height="11dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_view" />

</android.support.constraint.ConstraintLayout>